// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Syncer > generateTemplate > handleEntityChange 1`] = `
[
  "handleEntityChange",
  "actionGenerateSchemas",
  "generateTemplate",
  "renderTemplate",
  "generateTemplate",
  "renderTemplate",
  "Template__generated:render",
  "resolveRenderedTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > generateTemplate > handleModelOrFrameChange 1`] = `
[
  "handleModelOrFrameChange",
  "autoloadModels",
  "autoloadTypes",
  "autoloadApis",
  "actionGenerateServices",
  "generateTemplate",
  "renderTemplate",
  "render",
  "resolveRenderedTemplate",
  "generateTemplate",
  "renderTemplate",
  "resolveRenderedTemplate",
]
`;

exports[`Syncer > generateTemplate > scaffolding: model 1`] = `
[
  "generateTemplate",
  "renderTemplate",
  "render:model",
  "resolveRenderedTemplate",
]
`;
